[package]
name = "rusty-belt"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "tmux-client"
# src = "src/bin/rusty-belt-server.rs"
# [[bin]]
# name = "rusty-belt-server"
# src = "src/bin/tmux-client.rs"


[dependencies]
clap = { version = "4.4.8", features = ["derive", "env", "unicode"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sysinfo = "0.29.10"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = {version = "0.7.10", features = ["codec"]}
prost = "0.12"
futures = "0.3"
futures-core = "0.3"
futures-sink = "0.3"
default-net = "0.21.0"
log = "0.4.20"
log4rs = "1.2.0"
humansize = { version = "2.1.3", features = ["impl_style"] }
lazy_static = "1.4.0"
mockall = "0.11.4"

[build-dependencies]
prost-build = "0.12"
